--- a/walle/views/sample.html
+++ b/walle/views/sample.html
@@ -11,6 +11,7 @@
         <div class="row-fluid">
             <div class="span2">
                 <!--Sidebar content-->
+                <p>Total number of phones: {{phones.length}}</p>
                 Search: <input ng-model="query">
                 Sort by:
                 <select ng-model="orderProp">
