--- a/walle/public/stylesheets/style.css
+++ b/walle/public/stylesheets/style.css
@@ -1,8 +1,63 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+}
+
+.btn-transcolor {
+    background-color: #ffffff;
+}
+
+.buttons {
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+}
+
+.mybutton {
+    background-color: white;
+    border: 1px;
+    border-color: white;
+    border-radius: 4px;
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    display: inline-block;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+}
+
+.container {
+    width: 250px;
+    margin-top: 10px;
+    float: left;
+}
+
+.temperatureNumber {
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
+
+.number {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 90px;
+    color: #ffffff;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 5px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: default;
 }
